# JIRAX

./: .gitignore  JIRAX.py  README.md  calls.txt  fetcher_sql.py  pyproject.toml  templates.py  ucm_issues.csv
