[project]
name = "jiracaf-agents"
version = "0.1.0"
description = "Entorno de pruebas agentes de Jira"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "sqlite-utils>=3.38",
]
